changes in entity and controller

--- a/blogmanagement/src/main/resources/application.properties
+++ b/blogmanagement/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/blog_management_system?createDatabaseIfNotExist=true
+
+#Connection properties
+spring.datasource.url=jdbc:mysql://localhost:3306/blog_management?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+
+#JPA properties
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.dialect:org.hibernate.dialect.MySQL8Dialect
 
+#SLF4J properties
+logging.file.name=api.log
